# octo-fiesta-spotify-api

./: .env.example  AGENTS.md  Dockerfile  README.md  SPOTIFY_METADATA_CAPTURE_PLAN.md  STRUCTURE_PLAN.md  docker-compose.yml  pyproject.toml  requirements.txt  test_playwright.py
octofiestaspotifyapi/: api.py
octofiestaspotifyapi/client/browser/: spotify_browser_client.py
octofiestaspotifyapi/client/download/: spotiflac_client.py
octofiestaspotifyapi/container/: default_container.py
octofiestaspotifyapi/controller/: base_controller.py  spotify_controller.py
octofiestaspotifyapi/logger/: api_logger.py  app_logger.py  base_logger.py  browser_logger.py  download_logger.py  spotify_client_logger.py
octofiestaspotifyapi/provider/: spotify_download_provider.py  spotify_metadata_provider.py
octofiestaspotifyapi/service/: local_library_service.py  spotify_album_service.py  spotify_artist_service.py  spotify_download_service.py  spotify_proxy_service.py  spotify_search_service.py  spotify_track_service.py
